# pikuma-physics

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2_gfx.cmake  FindSDL2_image.cmake
include/: Application.hpp  Graphics.hpp
include/Physics/: Constants.hpp  Particle.hpp  Vec2.hpp
include/Shared/: Vec2.hpp  Vec3.hpp  Vector.hpp
src/: Application.cpp  CMakeLists.txt  Graphics.cpp
src/Physics/: Particle.cpp  Vec2.cpp  Vec3.cpp
src/Shared/: Vec2.cpp  Vec3.cpp  Vector.cpp
test/: CMakeLists.txt  test.cpp
